--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -4,8 +4,8 @@
 }
 
 <h2>Add a Gig</h2>
-
-<form>
+@using (Html.BeginForm("Create", "Gigs"))
+{
     <div class="form-group">
         @Html.LabelFor(model => model.Location, new { htmlAttributes = new { @class = "control-lable" } })
 
@@ -22,7 +22,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.GenreId)
-        @Html.DropDownListFor(model => model.GenreId, new SelectList(Model.Genres, "Id", "Name"), "",  new { @class = "form-control" } )
+        @Html.DropDownListFor(model => model.GenreId, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
-</form>
+}
