--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -8,21 +8,31 @@
 {
     <div class="form-group">
         @Html.LabelFor(model => model.Location, new { htmlAttributes = new { @class = "control-lable" } })
-
         @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @placeholder = "Location" } })
-
+        @Html.ValidationMessageFor(model => model.Location)
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.Date)
         @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder = "Date" } })
+        @Html.ValidationMessageFor(model => model.Date)
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.Time)
         @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control", @placeholder = "Time" } })
+        @Html.ValidationMessageFor(model => model.Time)
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.GenreId)
         @Html.DropDownListFor(model => model.GenreId, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.GenreId)
+
+
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+
 }
