--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -6,6 +6,7 @@
 <h2>Add a Gig</h2>
 @using (Html.BeginForm("Create", "Gigs"))
 {
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(model => model.Location, new { htmlAttributes = new { @class = "control-lable" } })
         @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @placeholder = "Location" } })
@@ -13,7 +14,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.Date)
-        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder = "Date" } })
+        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder = "dd/MM/yyyy (20/04/2020)" } })
         @Html.ValidationMessageFor(model => model.Date)
     </div>
     <div class="form-group">
