Finish Layout Desgin

--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -1,8 +1,17 @@
-﻿body {
+﻿@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600;700&family=Roboto:wght@400;500&display=swap');
+
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: 'Cairo', sans-serif;
+    font-size: 1.8rem;
+    /*font-family: 'Roboto', sans-serif;*/
 }
 
+h1, h2, h3, h4, h5 {
+    font-family: 'Cairo', sans-serif;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -22,4 +31,77 @@ select,
 textarea {
     max-width: 280px;
 }
+/*Bootstrap Overrides */
+.navbar-inverse {
+    background-color: #ff4342;
+    border-color: #ff5e42;
+}
 
+.navbar-inverse .navbar-nav > li > a {
+        color: #ffffff;
+}
+
+.navbar-inverse .navbar-brand {
+        color: #ffffff;
+}
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    background-color: rgba(255,152,114,0.53);
+}
+.dropdown-menu{
+      box-shadow: none;
+        -moz-box-shadow: none;
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    text-decoration: none;
+    background-color: rgba(255,152,114,0.9);
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-top-color: #fff;
+}
+
+.navbar-brand {
+    line-height: 20px;
+    font-weight: 700;
+}
+
+
+
+
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+
+.form-control {
+    background-color: #f1f1f1;
+    border: 1px solid #ececec;
+    font-size: 1.6rem;
+    padding: 20px 15px;
+    -ms-border-radius: 10px;
+    border-radius: 10px;
+}
+
+    .form-control:focus {
+        border-color: #2196f3;
+        box-shadow: none;
+        -moz-box-shadow: none;
+    }
+
+select.form-control {
+    height: 42px;
+    padding: 5px 10px;
+}
+
+.field-validation-error {
+    color: orangered;
+    font-size: 1.5rem;
+}
+
+.btn {
+    font-size: 1.8rem;
+    padding: 7px 20px;
+    border-radius: 11px;
+}
