--- a/GigHub/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/GigHub/Views/Gigs/Create.cshtml
@@ -6,25 +6,27 @@
 <h2>Add a Gig</h2>
 @using (Html.BeginForm("Create", "Gigs"))
 {
+    <p class="alert alert-info">All fields are<strong>Required.</strong></p>
+
     @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(model => model.Location, new { htmlAttributes = new { @class = "control-lable" } })
-        @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @placeholder = "Location" } })
+        @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @placeholder = "Location", autofocus= "autofocus" } })
         @Html.ValidationMessageFor(model => model.Location)
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.Date)
-        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder = "dd/MM/yyyy (20/04/2020)" } })
+        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @placeholder = "eg. 30/01/2020" } })
         @Html.ValidationMessageFor(model => model.Date)
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.Time)
-        @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control", @placeholder = "Time" } })
+        @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control", @placeholder = "eg. 21:30" } })
         @Html.ValidationMessageFor(model => model.Time)
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.GenreId)
-        @Html.DropDownListFor(model => model.GenreId, new SelectList(Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.DropDownListFor(model => model.GenreId, new SelectList(Model.Genres, "Id", "Name"), "-Select Genre-", new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.GenreId)
 
 
