Finished Gig Canceled Functionality

--- a/GigHub/GigHub/Views/Shared/_Layout.cshtml
+++ b/GigHub/GigHub/Views/Shared/_Layout.cshtml
@@ -28,7 +28,11 @@
         </div>
     </div>
     <div class="container body-content">
+        <div class="row">
             @RenderBody()
+
+
+        </div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year -GigHub</p>
