--- a/GigHub/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,9 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a href="/Gigs/Attending">Gigs I'm Going</a></li>
-                <li><a href="#">Artist I'm Following</a></li>
+                <li><a href="/Gigs/MyUpcomeingGigs">My Next Gigs</a></li>
+                <li><a href="/Artists/Following">Artist I'm Following</a></li>
+
                 <li role="separator" class="divider"></li>
                 <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
             </ul>
