--- a/GigHub/GigHub/Content/Site.css
+++ b/GigHub/GigHub/Content/Site.css
@@ -155,6 +155,7 @@ ul.upcomeing-gigs-list {
 
     .details > .artist {
         font-weight: bold;
+        display:block
     }
 
 
@@ -165,4 +166,16 @@ ul.upcomeing-gigs-list {
     /*border-radius: 0px 0px 5px 5px;*/
     /*border: 1px solid #b5b5b5;*/
     border-top: none;
+}
+
+
+.action{
+    display:none !important;
+    font-size:1.4rem
+}
+
+
+.single-gig:hover .action{
+    display:block !important;
+
 }
