--- a/GigHub/GigHub/Views/Gigs/GigForm.cshtml
+++ b/GigHub/GigHub/Views/Gigs/GigForm.cshtml
@@ -1,14 +1,18 @@
 ﻿@model GigHub.ViewModels.GigFormViewModel
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = Model.Heading;
 }
 
-<h2>Add a Gig</h2>
-@using (Html.BeginForm("Create", "Gigs"))
+<h2>@Model.Heading a Gig</h2>
+
+
+@using (Html.BeginForm(Model.Action, "Gigs"))
 {
     <p class="alert alert-info">All fields are<strong>Required.</strong></p>
 
     @Html.AntiForgeryToken()
+        
+    @Html.HiddenFor(model=> model.Id)
     <div class="form-group">
         @Html.LabelFor(model => model.Location, new { htmlAttributes = new { @class = "control-lable" } })
         @Html.EditorFor(model => model.Location, new { htmlAttributes = new { @class = "form-control", @placeholder = "Location", autofocus= "autofocus" } })
@@ -31,7 +35,7 @@
 
 
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">@Model.Heading</button>
 }
 
 @section scripts
