make Going Btn Still Blue by LookUp

--- a/GigHub/GigHub/Content/Site.less
+++ b/GigHub/GigHub/Content/Site.less
@@ -243,3 +243,17 @@ ul.upcomeing-gigs-list {
         }
     }
 }
+/*Search Form */
+
+.search-box {
+    width: 300px;
+
+    span {
+        border: none;
+        border-left: 1px solid #d3d1d1 !important;
+    }
+
+    input[type=text] {
+        border: none;
+    }
+}
