--- a/GigHub/GigHub/Views/Shared/_Layout.cshtml
+++ b/GigHub/GigHub/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
     </div>
 
     @Scripts.Render("~/bundles/Lib")
+    @Scripts.Render("~/bundles/app")
     @RenderSection("scripts", required: false)
 
     @*//type="text/x-template" to make browser Ignore script to be able to write Underscore *@
